// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterSelector should render normally with local cluster is hidden 1`] = `
<EuiComboBox
  aria-label="Select a data source"
  async={false}
  compressed={true}
  data-test-subj="clusterSelectorComboBox"
  fullWidth={false}
  isClearable={true}
  isDisabled={false}
  onChange={[Function]}
  options={Array []}
  placeholder="Select a data source"
  prepend="Data source"
  selectedOptions={Array []}
  singleSelection={
    Object {
      "asPlainText": true,
    }
  }
  sortMatchesBy="none"
/>
`;

exports[`ClusterSelector should render normally with local cluster not hidden 1`] = `
<EuiComboBox
  aria-label="Select a data source"
  async={false}
  compressed={true}
  data-test-subj="clusterSelectorComboBox"
  fullWidth={false}
  isClearable={true}
  isDisabled={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "id": "",
        "label": "Local cluster",
      },
    ]
  }
  placeholder="Select a data source"
  prepend="Data source"
  selectedOptions={
    Array [
      Object {
        "id": "",
        "label": "Local cluster",
      },
    ]
  }
  singleSelection={
    Object {
      "asPlainText": true,
    }
  }
  sortMatchesBy="none"
/>
`;

exports[`ClusterSelector: check dataSource options should always place local cluster option as the first option when local cluster not hidden 1`] = `
<EuiComboBox
  aria-label="Select a data source"
  async={false}
  compressed={true}
  data-test-subj="clusterSelectorComboBox"
  fullWidth={false}
  isClearable={true}
  isDisabled={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "id": "",
        "label": "Local cluster",
      },
      Object {
        "id": "test",
        "label": "test",
      },
      Object {
        "id": "test2",
        "label": "test",
      },
      Object {
        "id": "alpha-test",
        "label": "alpha-test",
      },
      Object {
        "id": "beta-test",
        "label": "beta-test",
      },
    ]
  }
  placeholder="Select a data source"
  prepend="Data source"
  selectedOptions={
    Array [
      Object {
        "id": "",
        "label": "Local cluster",
      },
    ]
  }
  singleSelection={
    Object {
      "asPlainText": true,
    }
  }
  sortMatchesBy="none"
/>
`;
